[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://combat/interface/pause/PauseMode.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/pause-window.png" type="Texture" id=3]
[ext_resource path="res://interface/themes/grey_theme.tres" type="Theme" id=4]
[ext_resource path="res://combat/interface/pause/Buttons.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/bungee/BungeeLayers-Regular.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="Pause" type="Control"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.640902 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 834, 635 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="Sprite" parent="."]
position = Vector2( 651.635, 357.94 )
scale = Vector2( 0.745386, 0.745386 )
texture = ExtResource( 3 )

[node name="GuiElements" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -329.0
margin_top = -274.0
margin_right = 349.0
margin_bottom = 288.0
theme = ExtResource( 4 )

[node name="Title" type="Label" parent="GuiElements"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -124.0
margin_right = 124.0
margin_bottom = 78.0002
theme = ExtResource( 1 )
text = "PAUSE"
align = 1
valign = 1
uppercase = true

[node name="Buttons" type="VBoxContainer" parent="GuiElements"]
margin_left = 238.0
margin_top = 325.0
margin_right = 440.0
margin_bottom = 519.0
alignment = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="GuiElements/Buttons"]
margin_top = 24.0
margin_right = 202.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "CONTINUE"

[node name="Restart" type="Button" parent="GuiElements/Buttons"]
margin_top = 53.0
margin_right = 202.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "RESTART"

[node name="SkipLevel" type="Button" parent="GuiElements/Buttons"]
margin_top = 82.0
margin_right = 202.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 1 )
text = "SKIP LEVEL"

[node name="Options" type="Button" parent="GuiElements/Buttons"]
visible = false
margin_top = 99.0
margin_right = 182.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"

[node name="Quit1" type="Button" parent="GuiElements/Buttons"]
margin_top = 111.0
margin_right = 202.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 1 )
text = "QUIT TO MAP"

[node name="Quit2" type="Button" parent="GuiElements/Buttons"]
margin_top = 140.0
margin_right = 202.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 1 )
text = "QUIT TO CHARACTERS"

[node name="Quit3" type="Button" parent="GuiElements/Buttons"]
margin_top = 169.0
margin_right = 202.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 1 )
text = "QUIT TO MAIN MENU"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="GuiElements/Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="GuiElements/Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="GuiElements/Buttons/SkipLevel" to="." method="_on_SkipLevel_pressed"]
[connection signal="pressed" from="GuiElements/Buttons/Quit1" to="." method="_on_Quit1_pressed"]
[connection signal="pressed" from="GuiElements/Buttons/Quit2" to="." method="_on_Quit2_pressed"]
[connection signal="pressed" from="GuiElements/Buttons/Quit3" to="." method="_on_Quit3_pressed"]
